[package]
name = "pomodoro-notification-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
openssl = "0.10"
base64 = "0.21.5"
actix-web = { version = "4", features = ["openssl"] }
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
log = "0.4.20"
log4rs = "1.2.0"
